# XCNSpamShield

./: .gitignore  AGENTS.md  LICENSE  Makefile  PLAN.md  README.md
artifacts/sample-data/: sample_export.json
docs/: PLAN.md  SPEC.md  V2_PRD.md  textcnn-architecture.mmd
extension/: README.md  eslint.config.js  offscreen.html  package.json  pnpm-lock.yaml  popup.html  tsconfig.json  vite.config.ts  vite.content.config.ts
extension/public/: manifest.json
extension/tests/: actions.test.ts  author-moderation.test.ts  block-queue.test.ts  blocking-feedback.test.ts  collapser.test.ts  content-reply-result-cache.test.ts  (+9 more)
ml/: README.md  pyproject.toml  requirements.txt
ml/data/: vocab.txt
ml/data/augmentations/: hard_positive_replies.json
ml/data/raw/: xcnspamshield-export-1778990651047.json  xcnspamshield-export-1779002944085.json  xcnspamshield-export-1780044260363.json  xspamshield-export-1778921005172.json  xspamshield-export-1778933863391.json
ml/scripts/: convert_tfjs.sh  run_sample_pipeline.sh
ml/src/: __init__.py
ml/src/export/: __init__.py  compare_backends.py  convert_tfjs.py  export_onnx.py
ml/src/export/tensorflowjs_stubs/tensorflow_decision_forests/: __init__.py
ml/src/models/: __init__.py  textcnn.py
ml/src/preprocessing/: __init__.py  dataset_builder.py  pinyin_normalizer.py  tokenizer.py
ml/src/training/: __init__.py  config.py  evaluate.py  train.py
ml/src/workflow/: __init__.py  pipeline.py
ml/tests/: test_dataset_builder.py  test_export_equivalence.py  test_tokenizer.py  test_training.py
scripts/: copy-model.mjs
(+36 files in other folders)
